Clean up Better Movesets randomizer and test harnesses
Readability pass over the trainer moveset randomizer and its three test
files: simplify logic, de-duplicate, and tidy comments. No behaviour change.

- TrainerMovesetRandomizer: collapse always-true isAttackSlotEligible tail;
  merge the twin anti-synergy pruners into removeAntiSynergyMoves (loop-remove
  semantics preserved); drop a restating comment; standardise .toList() sites.
- BetterMovesetsRandomizerTest: extract checkRateCap and checkEnablerDependencies
  from checkOneRom; remove dead finalTp alias; stream nonZeroMoves/moveNames.
- MovesetProfileRandomizerTest: merge the two sweep drivers into one sweep()
  helper; one-line MonProfile; promote a //-comment to Javadoc.
- BetterMovesetsGoldenMasterRandomizerTest: extract printPasteReadyBlock; stream
  joinMoves and evenSpread's fill.

Verified: golden master 7/7 (no drift), BetterMovesetsRandomizerTest 2/2,
MovesetProfile 0 failures, :random:test green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>